lib_LTLIBRARIES = libCServer.la
libCServer_la_SOURCES = CServer.cc
libCServer_la_LDFLAGS = -version-info 3:12:2

#include_HEADERS = ../include/Callback.h

otherincludedir = $(includedir)/$(PACKAGE)
otherinclude_HEADERS = ../include/Callback.h ../include/Reducer.h ../include/account.h ./CServer.h reducer.h
