pkglib_LTLIBRARIES = libhelperJSON.la
libhelperJSON_la_SOURCES = helperJson.cc
libhelperJSON_la_LDFLAGS = -version-info 3:12:1

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = ../pkgconfig/libhelperJSON.pc
#include_HEADERS = ./helperJson.h

otherincludedir = $(includedir)/$(PACKAGE)
otherinclude_HEADERS = helperJson.h
